contratos, permisos y otros cambios de supabase sprint 3.1,3.2 y 3.3
